[package]
name = "advent2024_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
ascii_converter = "0.3.0"
# ndarray = "0.15.6"

ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

# ndarray = { version = "0.15.6", features = ["blas"] }
# blas-src = { version = "0.8.0", default-features = false, features = ["netlib"] }

ndarray-linalg = "0.16.0"

# lapack = "0.19.0"